--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         <section id="contacto">
             <h2>Contacto</h2>
-            <p>Correo: contacto@mitienda.com | Teléfono: +123 456 789</p>
+            <p>Correo: gronegroup@gmail.com | Teléfono: +54-3794009856</p>
         </section>
     </main>
 
