--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header>
-        <h1>Mi Tienda de Electrónicos</h1>
+        <h1>    <img src="logo.png" alt="Logo de la Tienda" class="logo">
+
         <nav>
             <ul>
                 <li><a href="#catalogo">Catálogo</a></li>
