--- a/index.html
+++ b/index.html
@@ -1,90 +1,40 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda GroneGroup</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <h1>    <img src="logo.png" alt="Logo de la Tienda" class="logo">
+<header><img src="assets/logo.png" alt="Mi logo" width="1400"></header>
+<section>
+  <h2>Tu tinda online</h2>
+  <p>Descripción de tus productos o servicios…</p>
+</section>
+<link rel="stylesheet" href="assets/style.css">
 
-        <nav>
-            <ul>
-                <li><a href="#catalogo">Catálogo</a></li>
-                <li><a href="#carrito">Carrito</a></li>
-                <li><a href="#pago">Pago</a></li>
-                <li><a href="#contacto">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
+<div class="btn-group" role="group">
+    <button type="button" class="btn btn-primary" data-catalog="celulares">Celulares</button>
+    <!-- otros botones si los hay -->
+</div>
 
-    <main>
-        <section id="catalogo">
-            <h2>Catálogo de Productos</h2>
-            <div class="productos-grid">
-                <!-- Ejemplo de productos. Puedes agregar más aquí -->
-                <div class="producto">
-                    <img src="imagen1.jpg" alt="Auriculares inalámbricos">
-                    <h3>Auriculares Inalámbricos</h3>
-                    <p>Descripción: Auriculares con cancelación de ruido. Precio: $50.</p>
-                    <button onclick="agregarAlCarrito('Auriculares', 50)">Agregar al Carrito</button>
-                </div>
-                <div class="producto">
-                    <img src="imagen2.jpg" alt="Teléfono inteligente">
-                    <h3>Teléfono Inteligente</h3>
-                    <p>Descripción: Smartphone de última generación. Precio: $300.</p>
-                    <button onclick="agregarAlCarrito('Teléfono', 300)">Agregar al Carrito</button>
-                </div>
-                <div class="producto">
-                    <img src="imagen3.jpg" alt="Laptop">
-                    <h3>Laptop</h3>
-                    <p>Descripción: Laptop con procesador i7. Precio: $800.</p>
-                    <button onclick="agregarAlCarrito('Laptop', 800)">Agregar al Carrito</button>
-                </div>
-                <!-- Agrega más productos según tu catálogo -->
-            </div>
-        </section>
+<script>
+    document.querySelectorAll('.btn-group button').forEach(btn => {
+        btn.addEventListener('click', () => {
+            // marcar botón activo
+            document.querySelectorAll('.btn-group button').forEach(b => b.classList.remove('active'));
+            btn.classList.add('active');
 
-        <section id="carrito">
-            <h2>Carrito de Compras</h2>
-            <div id="lista-carrito">
-                <!-- Aquí se mostrarán los productos agregados -->
-            </div>
-            <button onclick="mostrarPago()">Proceder al Pago</button>
-        </section>
+            const cat = btn.dataset.catalog; // = "celulares"
+            // cargar el catálogo correspondiente
+            fetch(`/catalogo/${cat}`)
+                .then(r => r.text())
+                .then(html => {
+                    document.getElementById('catalogo').innerHTML = html;
+                })
+                .catch(err => console.error(err));
+        });
+    });
+</script>
 
-        <section id="pago">
-            <h2>Formas de Pago</h2>
-            <p>Elige tu método de pago:</p>
-            <form id="form-pago">
-                <label>
-                    <input type="radio" name="metodo" value="tarjeta"> Tarjeta de Crédito/Débito
-                </label>
-                <label>
-                    <input type="radio" name="metodo" value="paypal"> PayPal
-                </label>
-                <label>
-                    <input type="radio" name="metodo" value="transferencia"> Transferencia Bancaria
-                </label>
-                <input type="text" placeholder="Nombre completo" required>
-                <input type="email" placeholder="Correo electrónico" required>
-                <button type="submit">Realizar Pago</button>
-            </form>
-            <p id="mensaje-pago">Este es un simulacro. En un sitio real, integrarías un gateway de pagos.</p>
-        </section>
-
-        <section id="contacto">
-            <h2>Contacto</h2>
-            <p>Correo: gronegroup@gmail.com | Teléfono: +54-3794009856</p>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2023 Mi Tienda de Electrónicos. Todos los derechos reservados.</p>
-    </footer>
-
-    <script src="script.js"></script>
-</body>
-</html>
+<div id="catalogo"></div>
+<button data-catalog="camaras">
+    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <rect x="2" y="4" width="20" height="16" rx="2" stroke="currentColor" stroke-width="2"/>
+        <circle cx="12" cy="12" r="4" fill="currentColor"/>
+        <path d="M12 16a4 4 0 0 0 4-4H8a4 4 0 0 0 4 4z" stroke="currentColor" stroke-width="2"/>
+    </svg>
+    CAMARAS
+</button>
