--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
         <div class="logo">
             <!-- AGREGAR LOGO AQUÍ: Reemplaza el siguiente comentario con tu imagen -->
             <!-- Ejemplo: <img src="ruta/a/tu/logo.png" alt="Grone Group" class="logo-image"> -->
-            <div class="logo-placeholder">LOGO AQUÍ</div>
+            <img src="assets/logo.png" alt="Grone Group" class="logo-image">
         </div>
         <nav>
             <a href="#inicio" class="nav-link active" data-section="inicio">Inicio</a>
