--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
     <!-- Header -->
     <div class="header">
         <div class="header-content">
-            <div class="logo">TU LOGO</div>
+            <div class="logo">GRONEGROUP</div>
             <button class="cart-button" onclick="toggleCart()">
                 Carrito
                 <span class="cart-count" id="cartCount">0</span>
