--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         .logo {
             font-size: 24px;
             font-weight: 600;
-            color: #1a1a1a;
+            color: #a5d1b6;
             letter-spacing: -0.5px;
         }
         
@@ -502,7 +502,7 @@
     <script>
         // CONFIGURACIÓN - CAMBIA ESTOS DATOS
         const CONFIG = {
-            whatsappNumber: '5491123456789', // TU NÚMERO DE WHATSAPP (con código de país)
+            whatsappNumber: '543794009856', // TU NÚMERO DE WHATSAPP (con código de país)
             shippingCost: 20000
         };
         
