--- a/index.html
+++ b/index.html
@@ -563,6 +563,13 @@
                 description: 'Smart TV 4K UHD, Android TV',
                 price: 520000,
                 category: 'electronica'
+            },
+            {
+                id: 9,
+                name: 'Producto de Prueba',
+                description: 'Producto agregado automáticamente para verificar la inserción desde el editor.',
+                price: 9999,
+                category: 'electronica'
             }
         ];
         
