--- a/index.html
+++ b/index.html
@@ -566,10 +566,11 @@
             },
             {
                 id: 9,
-                name: 'Producto de Prueba',
-                description: 'Producto agregado automáticamente para verificar la inserción desde el editor.',
-                price: 9999,
-                category: 'electronica'
+                name: 'HIKVISION Turbo HD Mini Bullet 1080P',
+                description: 'HIKVISION TURBO HD MINI BULLET 1080P, LENTE 2,8MM, IR 20MTS',
+                price: 45000,
+                category: 'camaras',
+                image: 'images/CAMARA 1080P'
             }
         ];
         
