--- a/index.html
+++ b/index.html
@@ -587,7 +587,10 @@
             productsContainer.innerHTML = filteredProducts.map(product => `
                 <div class="product-card">
                     <div class="product-image">
-                        <div class="product-placeholder"></div>
+                        ${product.image 
+                            ? `<img src="${product.image}" alt="${product.name}" style="width:100%;height:100%;object-fit:cover;">` 
+                            : `<div class="product-placeholder"></div>`
+                        }
                     </div>
                     <div class="product-info">
                         <div class="product-category">${getCategoryName(product.category)}</div>
