Eliminado backend de Mercado Pago, usando solo WhatsApp

--- a/index.html
+++ b/index.html
@@ -1207,9 +1207,7 @@
         // CONFIGURACIÓN - CAMBIA ESTOS DATOS
         const CONFIG = {
             whatsappNumber: '543794009856', // TU NÚMERO DE WHATSAPP (con código de país)
-            shippingCost: 20000,
-            // URL del backend en Vercel - Actualizar después del deploy
-            vercelApiUrl: 'https://TU-PROYECTO.vercel.app/api/create-payment'
+            shippingCost: 20000
         };
         // Códigos de descuento disponibles (clave: porcentaje)
         CONFIG.discountCodes = {
