Actualizado título a GroneShop - Tienda Online

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GroneShop</title>
+    <meta name="description" content="GroneShop - Tecnología de Calidad con Garantía">
+    <title>GroneShop - Tienda Online</title>
     <style>
         * {
             margin: 0;
