Eliminados emojis de carteles de proximamente

--- a/index.html
+++ b/index.html
@@ -2414,7 +2414,6 @@
                 productsContainer.innerHTML = `
                     <div style="display:flex;flex-direction:column;align-items:center;justify-content:center;min-height:400px;text-align:center;padding:40px;">
                         <div style="background:linear-gradient(135deg, #FF6B6B 0%, #FF5252 100%);color:white;padding:40px 60px;border-radius:16px;box-shadow:0 8px 24px rgba(255,82,82,0.4);margin-bottom:20px;">
-                            <div style="font-size:64px;margin-bottom:16px;">🚀</div>
                             <div style="font-size:32px;font-weight:bold;margin-bottom:12px;">PRÓXIMAMENTE</div>
                             <div style="font-size:18px;opacity:0.9;">Estamos trabajando para traerte los mejores productos</div>
                         </div>
@@ -2464,7 +2463,7 @@
                     return `
                     <div class="product-card" style="position:relative;opacity:0.7;pointer-events:none;">
                         <div style="position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);background:rgba(255,107,107,0.95);color:white;padding:20px 40px;border-radius:8px;font-weight:bold;font-size:18px;z-index:10;box-shadow:0 4px 12px rgba(0,0,0,0.3);">
-                            🚀 PRÓXIMAMENTE
+                            PRÓXIMAMENTE
                         </div>
                         ${badge}
                         <div class="product-image" style="filter:grayscale(100%);">
